--- a/index.html
+++ b/index.html
@@ -1,36 +1,139 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Описание проекта">
-    <title>ProjectName</title>
-    <link rel="stylesheet" href="css/style.min.css">
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <div class="container"></div>
-      </header>
-      <main>
-        <section class="intro">
-          <div class="container">
-            <h1>Тестовая страница.</h1>
-            <p>На данной странице показан пример модальных окон.</p>
-            <p>Перед началом разработки не забудьте удалить всё содержимое &#8249;main&#8250;&#8249;&#8260;main&#8250;.</p>
-            <p><a class="btn" href="#" data-open-modal="feedback">modal--feedback link</a></p>
-            <p><a class="btn" href="#" data-open-modal="success">modal--success link</a></p>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="journeyToAntarctic" content="Описание проекта">
+  <meta name="keywords" content="Круиз, тур, отпуск, Антарктика">
+  <link rel="preload" href="./fonts/montserrat-bold.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/montserrat-medium.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/montserrat-regular.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/montserrat-semibold.woff2" as="font" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.min.css">
+  <title>Круизы в Антарктику</title>
+</head>
+
+<body>
+  <div class="wrapper">
+    <header class="header">
+      <div class="container">
+        <nav class="header__navigation navigation">
+          <div class="navigation__logo">
+            <a class="navigation__link" href="index.html">
+              <span class="visually-hidden">Переход на главную страницу</span>
+              <svg aria-hidden="true" focusable="false" width="70" height="38">
+                <use href="./img/sprite.svg#logo"></use>
+              </svg>
+              <button class="navigation__button" type="button">
+                <span class="visually-hidden">Открыть/закрыть меню</span>
+              </button>
+            </a>
+          </div>
+          <ul class="navigation__list">
+            <li class="navigation__item">
+              <a href="#advantages"> Преимущества </a>
+            </li>
+            <li class="navigation__item">
+              <a href="#!"> Направления </a>
+            </li>
+            <li class="navigation__item">
+              <a href="#cruises"> Ближайшие круизы </a>
+            </li>
+            <li class="navigation__item">
+              <a href="#contacts"> Контакты </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main class="main">
+        <h1 class="visually-hidden">Круизы в Антарктику</h1>
+        <section class="main__promo">
+          <picture>
+            <source type="image/webp" media="(max-width: 767px)"
+              srcset="./img/promo-mobile@1x.webp 1x, ./img/promo-mobile@2x.webp 2x">
+            <source type="image/webp" media="(max-width: 1023px)"
+              srcset="./img/promo-tablet@1x.webp 1x, ./img/promo-tablet@2x.webp 2x">
+            <source type="image/webp" srcset="./img/promo-desktop@1x.webp 1x, ./img/promo-desktop@2x.webp 2x">
+            <source media="(max-width: 767px)" srcset="./img/promo-mobile@1x.jpg 1x, ./img/promo-mobile@2x.jpg 2x">
+            <source media="(max-width: 1023px)" srcset="./img/promo-tablet@1x.jpg 1x, ./img/promo-tablet@2x.jpg 2x">
+            <img src="./img/promo-desktop@1x.jpg" srcset="./img/promo-desktop@2x.jpg 2x" width="1366" height="650"
+              alt="Побережье Антарктики.">
+          </picture>
+          <div class="main__promo-description container">
+            <h2>Круизы в&nbsp;Антарктику</h2>
+            <p>Волшебный мир айсбергов&nbsp;и&nbsp;пингвинов</p>
           </div>
         </section>
-      </main>
-      <footer>
-        <div class="container"></div>
-      </footer>
-    </div>
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <nav class="footer__navigation navigation">
+          <div class="navigation__logo navigation__logo--footer">
+            <a class="navigation__link" href="index.html">
+              <span class="visually-hidden">Переход на главную страницу</span>
+              <svg aria-hidden="true" focusable="false" width="70" height="38">
+                <use href="./img/sprite.svg#logo"></use>
+              </svg>
+            </a>
+          </div>
+          <ul class="navigation__list navigation__list--footer">
+            <li class="navigation__item">
+              <a href="#advantages"> Преимущества </a>
+            </li>
+            <li class="navigation__item">
+              <a href="#"> Направления </a>
+            </li>
+            <li class="navigation__item">
+              <a href="#cruises"> Ближайшие круизы </a>
+            </li>
+            <li class="navigation__item">
+              <a href="#contacts"> Контакты </a>
+            </li>
+          </ul>
+          <div class="navigation__social social">
+            <ul class="social__list">
+              <li class="social__item">
+                <a class="social__link social__link--ok" href="#!">
+                  <span class="visually-hidden">
+                    Перейти на страницу в социальной сети Одноклассники
+                  </span>
+                  <svg aria-hidden="true" focusable="false" width="12" height="20">
+                    <use href="./img/sprite.svg#ok"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--dzen" href="#!">
+                  <span class="visually-hidden">
+                    Перейти на страницу на платформе Дзен
+                  </span>
+                  <svg aria-hidden="true" focusable="false" width="20" height="20">
+                    <use href="./img/sprite.svg#dzen"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--reddit" href="#!">
+                  <span class="visually-hidden">
+                    Перейти на страницу на платформе Реддит
+                  </span>
+                  <svg aria-hidden="true" focusable="false" width="20" height="20">
+                    <use href="./img/sprite.svg#reddit"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </footer>
+  </div>
 
-    <!-- Модалки -->
-    <div class="modal modal--preload" data-modal="feedback">
+  <!-- Модалки -->
+  <!--     <div class="modal modal--preload" data-modal="feedback">
       <div class="modal__wrapper">
         <div class="modal__overlay" data-close-modal></div>
         <div class="modal__content">
@@ -56,9 +159,10 @@
           </button>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <script src="js/vendor.min.js"></script>
-    <script src="js/main.min.js"></script>
-  </body>
+  <script src="js/vendor.min.js"></script>
+  <script src="js/main.min.js"></script>
+</body>
+
 </html>
